--- a/EasyIPC/EasyIPC.vcxproj.filters
+++ b/EasyIPC/EasyIPC.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="src\Server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Encryption\NoEncryptionStrategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\EasyIPC.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Encryption\NoEncryptionStrategy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
